--- a/index.ipynb
+++ b/index.ipynb
@@ -65,9 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'x': 0, 'y': 100},\n",
+       " {'x': 100, 'y': 150},\n",
+       " {'x': 200, 'y': 600},\n",
+       " {'x': 400, 'y': 700}]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_show = {'x': 0, 'y': 100}\n",
     "second_show = {'x': 100, 'y': 150}\n",
@@ -91,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 1.5, 'b': 100.0}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from linear_equations import build_regression_line\n",
     "x_values = list(map(lambda show: show['x'],shows))\n",
@@ -111,9 +136,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "line function",
+         "type": "scatter",
+         "uid": "4b6e4a20-57fd-11e9-85c8-ebd59bb9e22c",
+         "x": [
+          0,
+          100,
+          200,
+          400
+         ],
+         "y": [
+          100,
+          250,
+          400,
+          700
+         ]
+        },
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "4b6e4c8c-57fd-11e9-85c8-ebd59bb9e22c",
+         "x": [
+          0,
+          100,
+          200,
+          400
+         ],
+         "y": [
+          100,
+          150,
+          600,
+          700
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"ad6e1170-32fc-4496-bbe9-4b35b1888ab0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ad6e1170-32fc-4496-bbe9-4b35b1888ab0\", [{\"mode\": \"lines\", \"name\": \"line function\", \"x\": [0, 100, 200, 400], \"y\": [100.0, 250.0, 400.0, 700.0], \"type\": \"scatter\", \"uid\": \"4b952dc0-57fd-11e9-85c8-ebd59bb9e22c\"}, {\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 100, 200, 400], \"y\": [100, 150, 600, 700], \"type\": \"scatter\", \"uid\": \"4b953036-57fd-11e9-85c8-ebd59bb9e22c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"ad6e1170-32fc-4496-bbe9-4b35b1888ab0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ad6e1170-32fc-4496-bbe9-4b35b1888ab0\", [{\"mode\": \"lines\", \"name\": \"line function\", \"x\": [0, 100, 200, 400], \"y\": [100.0, 250.0, 400.0, 700.0], \"type\": \"scatter\", \"uid\": \"4b952dc0-57fd-11e9-85c8-ebd59bb9e22c\"}, {\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 100, 200, 400], \"y\": [100, 150, 600, 700], \"type\": \"scatter\", \"uid\": \"4b953036-57fd-11e9-85c8-ebd59bb9e22c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import m_b_trace, plot, trace_values\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
@@ -132,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'x': 0, 'y': 100},\n",
+       " {'x': 100, 'y': 150},\n",
+       " {'x': 200, 'y': 600},\n",
+       " {'x': 400, 'y': 700}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_show = {'x': 0, 'y': 100}\n",
     "second_show = {'x': 100, 'y': 150}\n",
@@ -401,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ RMSE = \\frac{\\sqrt{0^2 + (-100)^2 + 200^2 + 0^2}}{4} = \\frac{\\sqrt{50,000}}{4} = \\frac{223.6}{4} = 55.9$"
+    "$ RMSE = \\sqrt{\\frac{0^2 + (-100)^2 + 200^2 + 0^2}{4}} = \\sqrt{\\frac{50,000}{4}} = \\sqrt{12500} = 111.803$"
    ]
   },
   {
@@ -415,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ RMSE  = \\frac{\\sqrt{\\sum_{i = 1}^n ({y_i - \\hat{y_i}})^2}}{n}$"
+    "$ RMSE  = \\sqrt{\\frac{\\sum_{i = 1}^n ({y_i - \\hat{y_i}})^2}{n}}$"
    ]
   },
   {
@@ -456,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
